<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 Grégory Soutadé.
  Copyright (C) 2013-2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Silent Night</string>
    <string name="pref_isServiceEnabledTitle">Enable</string>
    <string name="pref_isServiceEnabledSummary">Enable Silent Night</string>
    <string name="pref_silentModeStartAt">Start time</string>
    <string name="pref_silentModeEndAt">End time</string>
    <string name="pref_airplaneModeTitle">Airplane mode</string>
    <string name="pref_airplaneModeSummary">Airplane mode enabled</string>
    <string name="pref_set">Set</string>
    <string name="pref_cancel">Cancel</string>
    <string name="pref_contactDeveloperTitle">Contact developer</string>
    <string name="pref_contactDeveloperSummary">Tell me about your problems with program</string>
    <string name="pref_rateTitle">Rate</string>
    <string name="pref_rateSummary">Rate program on the Google Play</string>
    <string name="pref_email">artemyankovskiy@gmail.com</string>
    <string name="pref_selectEmailApplication">Select email application</string>
    <string name="pref_suModeTitle">SU</string>
    <string name="pref_suModeSummary">Becomes root before airplane mode switch (mandatory for Android &gt; 4.2, need a rooted phone)</string>
    <string name="pref_disableSoundTitle">Sound off</string>
    <string name="pref_disableSoundSummary">Turn off sound</string>

</resources>
