<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:key="pref_isServiceEnabled" android:title="@string/pref_isServiceEnabledTitle" android:summary="@string/pref_isServiceEnabledSummary"/>
    <ru.neverdark.silentnight.TimePreference android:layout="@layout/main" android:key="pref_silentModeStartAt" android:title="@string/pref_silentModeStartAt"/>
    <ru.neverdark.silentnight.TimePreference android:layout="@layout/main" android:key="pref_silentModeEndAt" android:title="@string/pref_silentModeEndAt"/>
    <CheckBoxPreference android:key="pref_airplaneMode" android:title="@string/pref_airplaneModeTitle" android:summary="@string/pref_airplaneModeSummary"/>
    <Preference android:key="pref_rate" android:title="@string/pref_rateTitle" android:summary="@string/pref_rateSummary" />
    <Preference android:key="pref_contactDeveloper" android:title="@string/pref_contactDeveloperTitle" android:summary="@string/pref_contactDeveloperSummary" />
</PreferenceScreen>
